nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: nginx
  labels:
    app: nginx
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"80":"nginx-new-backend-config"}}'
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
