nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: nginx
spec:
  backend:
    serviceName: nginx
    servicePort: 80
